--- a/cleaner/requirements.txt
+++ b/cleaner/requirements.txt
@@ -4,6 +4,7 @@ dotenv==0.9.9
 idna==3.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+PyYAML==6.0.2
 requests==2.32.3
 six==1.17.0
 urllib3==2.4.0
