--- a/vmagent-config.yml
+++ b/vmagent-config.yml
@@ -4,5 +4,17 @@ global:
 scrape_configs:
   - job_name: 'nexus'
     static_configs:
-      - targets: ['sanich.space:8000']
+      - targets: ['sanich.tech:8000']
+
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: ['sanich.tech:9210']
+
+
+
+# docker run -d \
+#   --name node_exporter \
+#   -p 9210:9100 \
+#   --restart unless-stopped \
+#   prom/node-exporter
 
