--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,5 +59,21 @@ services:
     networks:
       - minio-net
 
+  minio-replica:
+    image: quay.io/minio/minio:latest
+    restart: always
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    ports:
+      - "9200:9000"
+      - "9201:9001"
+    volumes:
+      - ./volume/minio-replica-data:/data
+    networks:
+      - minio-net
+
+
 networks:
   minio-net:
