--- a/cleaner/configs/test/raw.yaml
+++ b/cleaner/configs/test/raw.yaml
@@ -1,42 +1,9 @@
-dry_run: true
-
 repo_names:
-  - target-raw1
-
-# Общее поведение, если не сработало ни одно правило
-no_match_retention_days: 7
-no_match_reserved: 2
-no_match_min_days_since_last_download: 1
+  - target-raw
 
 regex_rules:
-  "^file.*":
-    retention_days: 10
-    reserved: 1
-    min_days_since_last_download: 1
-
-  ".*\\.html$":
-    retention_days: 3
-    reserved: 2
-
-  ".*\\.log$":
+  "^/deep/nested/folder/file.*":
     retention_days: 5
-    reserved: 1
-    min_days_since_last_download: 2
+    reserved: 3
 
-  ".*\\.yaml$":
-    retention_days: 4
-    reserved: 0
 
-  ".*\\.json$":
-    retention_days: 6
-    reserved: 1
-
-  ".*\\.cfg$":
-    retention_days: 10
-
-  ".*\\.md$":
-    retention_days: 2
-
-  ".*\\.xml$":
-    retention_days: 5
-    reserved: 1
