ANOTHER FKIN FIX AA

--- a/cleaner/configs/maven.yaml
+++ b/cleaner/configs/maven.yaml
@@ -1,21 +1,13 @@
 repo_names:
   - maven2-test1
 
-
-# Специальные правила для Maven
 maven_rules:
   snapshot:
     regex_rules:
       ".*":
-        #retention_days: -1
-        #reserved: 3
         min_days_since_last_download: 1
-  
-  # release:
-  #   regex_rules:
-  #     ".*":
-  #       retention_days: -1
-  #       reserved: 1
-  #       #min_days_since_last_download: 30
+
+  # глобальные правила no-match (работают и для snapshot, и для release)
+    no_match_reserved: 10
 
 dry_run: true
