--- a/cleaner/configs/test/raw.yaml
+++ b/cleaner/configs/test/raw.yaml
@@ -1,11 +1,12 @@
 repo_names:
-  - test-migration
+  - test-migration1
 
 regex_rules:
   ".*test.*":
     retention_days: 7
     reserved: 2
     #min_days_since_last_download: 7
+
 #no_match_retention_days: 48
 
 
