--- a/vmagent-config.yml
+++ b/vmagent-config.yml
@@ -2,19 +2,7 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'nexus'
+  - job_name: "nexus_customs"
+    metrics_path: "/service/rest/metrics/prometheus"
     static_configs:
-      - targets: ['sanich.tech:8000']
-
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['sanich.tech:9210']
-
-
-
-# docker run -d \
-#   --name node_exporter \
-#   -p 9210:9100 \
-#   --restart unless-stopped \
-#   prom/node-exporter
-
+      - targets: ["sanich.tech:8000", "sanich.tech:8081"]
