--- a/minio-delete-markers/requirements.txt
+++ b/minio-delete-markers/requirements.txt
@@ -2,8 +2,13 @@ argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 certifi==2025.10.5
 cffi==2.0.0
+charset-normalizer==3.4.3
+dotenv==0.9.9
+idna==3.10
 minio==7.2.18
 pycparser==2.23
 pycryptodome==3.23.0
+python-dotenv==1.1.1
+requests==2.32.5
 typing_extensions==4.15.0
 urllib3==2.5.0
