--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,4 @@
 services:
-  haproxy:
-    image: haproxy:latest
-    restart: always
-    volumes:
-      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-    ports:
-      - "8200:9100"
-      - "8201:9101"
-    depends_on:
-      - minio-single
-    networks:
-      - minio-net
-
   nexus:
     image: sonatype/nexus3:3.83.2
     restart: unless-stopped
@@ -20,8 +7,6 @@ services:
       - ./volume/nexus-data:/nexus-data
     ports:
       - "9090:8081"
-      - "5000-5030:5000-5030"
-      - "8082-8090:8082-8090"
     environment:
       - INSTALL4J_ADD_VM_PARAMS=-Xms512m -Xmx1024m -XX:MaxDirectMemorySize=2g -Djava.util.prefs.userRoot=/nexus-data
     networks:
@@ -42,7 +27,8 @@ services:
       - "5432:5432"
     volumes:
       - ./volume/pg_data:/var/lib/postgresql/data
-
+    networks:
+      - minio-net
 
   minio-single:
     image: quay.io/minio/minio:latest
@@ -59,21 +45,19 @@ services:
     networks:
       - minio-net
 
-  minio-replica:
-    image: quay.io/minio/minio:latest
-    restart: always
-    command: server /data --console-address ":9001"
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
-    ports:
-      - "9200:9000"
-      - "9201:9001"
+  vector:
+    image: timberio/vector:latest-alpine
+    container_name: vector
+    restart: unless-stopped
     volumes:
-      - ./volume/minio-replica-data:/data
+      - ./volume/nexus-data/log/audit:/var/log/nexus_audit:ro
+      - ./vector/vector.toml:/etc/vector/vector.toml:ro
+    environment:
+      - VECTOR_LOG=info
     networks:
       - minio-net
 
-
 networks:
   minio-net:
+    external: true
+    name: transfer_minio-net
