--- a/allocate-service/vault/test.yaml
+++ b/allocate-service/vault/test.yaml
@@ -15,32 +15,32 @@
       - ".yml"
 
   tasks:
-    - name: Получаем все страницы с проектами GitLab
+    - name: Получаем все проекты с пагинацией
       vars:
-        page: 1
         all_projects: []
       block:
-        - name: Загружаем страницу
+        - name: Загружаем страницы с проектами
           uri:
-            url: "{{ gitlab_url }}/api/v4/groups/{{ group_id }}/projects?per_page=100&page={{ page }}"
+            url: "{{ gitlab_url }}/api/v4/groups/{{ group_id }}/projects?per_page=100&page={{ item }}"
             headers:
               PRIVATE-TOKEN: "{{ gitlab_token }}"
             return_content: true
-          register: api_response
-          until: api_response.json | length == 0
-          retries: 50
+          register: page_result
+          loop: "{{ range(1, 20) | list }}"  # ограничим 20 страниц для безопасности
+          until: page_result.json | length == 0
+          retries: 1
           delay: 0
-          loop: "{{ range(1, 1000) | list }}"
-          loop_control:
-            loop_var: page
-          when: api_response.json | length > 0
-          set_fact:
-            all_projects: "{{ all_projects + api_response.json }}"
 
-    - name: Показываем статистику
+        - name: Объединяем результаты всех страниц
+          set_fact:
+            all_projects: "{{ all_projects + item.json }}"
+          loop: "{{ page_result.results }}"
+          when: item.json | length > 0
+
+    - name: Показать общее количество проектов
       debug:
         msg: "Всего проектов: {{ all_projects | length }}"
 
-    - name: Выводим несколько примеров
+    - name: Показать первые 3 проекта
       debug:
         msg: "{{ all_projects[:3] | to_nice_json }}"
