--- a/allocate-service/vault/test.yaml
+++ b/allocate-service/vault/test.yaml
@@ -1,4 +1,4 @@
-- name: Получаем все проекты из GitLab группы
+- name: Получение всех проектов из GitLab группы с пагинацией
   hosts: all
   gather_facts: false
 
@@ -6,48 +6,38 @@
     gitlab_url: "https://gitlab.ru"
     group_id: "3514"
     gitlab_token: "{{ gitlab_token }}"
-    per_page: 10
+    per_page: 100
 
   tasks:
-    - name: Инициализация списка всех проектов
+    - name: Инициализируем список всех проектов
       set_fact:
         all_projects: []
+        current_page: 1
+        next_page: true
 
-    - name: Загружаем первую страницу
-      uri:
-        url: "{{ gitlab_url }}/api/v4/groups/{{ group_id }}/projects?per_page={{ per_page }}&page=1"
-        method: GET
-        headers:
-          PRIVATE-TOKEN: "{{ gitlab_token }}"
-        return_content: true
-      register: gitlab_page
-
-    - name: Сохраняем первую страницу
-      set_fact:
-        all_projects: "{{ gitlab_page.json }}"
-        next_page_url: "{{ gitlab_page.headers.Link | default('') | regex_search('<(.*?)>; rel=\"next\"', '\\1') | default('') }}"
-
-    - name: Загружаем остальные страницы
-      vars:
-        current_url: "{{ next_page_url }}"
-      while: current_url != ""
-      do:
-        - name: Загружаем следующую страницу GitLab API
+    - name: Загружаем страницы GitLab API
+      until: not next_page
+      retries: 50
+      delay: 0
+      block:
+        - name: Запрашиваем страницу {{ current_page }}
           uri:
-            url: "{{ current_url }}"
+            url: "{{ gitlab_url }}/api/v4/groups/{{ group_id }}/projects?per_page={{ per_page }}&page={{ current_page }}"
             method: GET
             headers:
               PRIVATE-TOKEN: "{{ gitlab_token }}"
             return_content: true
-          register: next_page_response
+          register: page_response
 
-        - name: Добавляем проекты из страницы
+        - name: Добавляем проекты в общий список
           set_fact:
-            all_projects: "{{ all_projects + next_page_response.json }}"
+            all_projects: "{{ all_projects + page_response.json }}"
 
-        - name: Обновляем ссылку на следующую страницу
+        - name: Проверяем, есть ли следующая страница
           set_fact:
-            current_url: "{{ next_page_response.headers.Link | default('') | regex_search('<(.*?)>; rel=\"next\"', '\\1') | default('') }}"
+            next_page: "{{ page_response.json | length == per_page }}"
+            current_page: "{{ current_page + 1 }}"
+      when: next_page | bool
 
     - name: Показать количество проектов
       debug:
